Create UserStateSnapshot entity for read-only operations. Optimise AnswersLayout implementation